--- a/front/css/styles-about.css
+++ b/front/css/styles-about.css
@@ -50,6 +50,10 @@ a {
   color: black;
 }
 
+.head.click{
+  color:#12A370;
+}
+
 .profile-btn {
   padding: 8px 15px;
   text-decoration: none;
@@ -131,7 +135,7 @@ a {
 .subscription {
   margin-top: 150px;
   height: 454px;
-  background-image: url(images/background.png);
+  background-image: url(D:/универ/СПО/front/images/background.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
