--- a/front/css/styles-history.css
+++ b/front/css/styles-history.css
@@ -81,7 +81,7 @@ a {
   position: relative;
 }
   
-.search-btn {
+.search-btn, .filter-btn {
   background-color: white;
   color: #12A370;
   padding: 10px 20px;
@@ -130,18 +130,36 @@ a {
   background-color: #238f3c;
 }
 
+h5{
+  padding-top: 14px;
+  opacity: 60%;
+}
+
+span{
+  color:rgb(248, 203, 0);
+  font-size: 30px;
+}
+
+.stars{
+  display: flex;
+  gap: 5px;
+}
+
 .recipes-grid {
   display: flex;
   justify-content: space-between;
 }
 
 .recipe-card {
+  display: flex;
+  flex-direction: column;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 16px 16px rgba(0, 0, 0, 0.08);
   padding-bottom: 30px;
   width: 30%;
   text-align: center;
+  align-items: center;
 }
 
 .recipe-card img {
@@ -213,4 +231,123 @@ footer {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 30px;
+}
+
+.filter-sidebar {
+  position: fixed;
+  top: 0;
+  right: -350px; /* Скрыто по умолчанию */
+  width: 350px;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.2);
+  transition: right 0.3s ease;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-sidebar.open {
+  right: 0;
+}
+
+.filter-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  border-bottom: 1px solid #ddd;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.close-btn {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.filter-content {
+  padding: 20px;
+  overflow-y: auto;
+  flex: 1;
+}
+
+.filter-section {
+  margin-bottom: 30px;
+}
+
+.filter-section p {
+  font-size: larger;
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+
+li input{
+  color: #12A370;
+}
+
+.input-group{
+  display: flex;
+}
+
+.input-group input {
+  width: 48%;
+  padding: 8px;
+  margin-right: 4%;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.input-group input:last-child {
+  margin-right: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul li {
+  margin-bottom: 10px;
+  display: flex;
+  gap: 5px;
+}
+
+.apply-btn {
+  background-color: #12A370;
+  padding: 10px;
+  color: #12A370;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.apply-btn:hover {
+  background-color: #127d58;
+
+}
+
+/* Затемнение фона */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+  z-index: 999;
+}
+
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
 }
