--- a/front/css/styles-main.css
+++ b/front/css/styles-main.css
@@ -50,6 +50,9 @@ a {
   color: black;
 }
 
+.head.click{
+  color:#12A370;
+}
 .profile-btn {
   padding: 8px 15px;
   text-decoration: none;
@@ -102,6 +105,10 @@ a {
   color: #12A370;
 } 
 
+.top {
+  display: flex;
+  justify-content: space-between;
+}
 /* Секция "Сейчас популярно" */
 .popular-recipes {
   padding: 50px;
@@ -118,7 +125,7 @@ a {
   text-align: right;
   color: #12A370;
   text-decoration: none;
-  margin-left: 72%;
+
 }
 
 .recipes-grid {
@@ -127,12 +134,15 @@ a {
 }
 
 .recipe-card {
+  display: flex;
+  flex-direction: column;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 16px 16px rgba(0, 0, 0, 0.08);
   padding-bottom: 30px;
   width: 30%;
   text-align: center;
+  align-items: center;
 }
 
 .recipe-card img {
@@ -160,11 +170,26 @@ a {
   margin-top: 10px;
 }
 
+
+h5{
+  padding-top: 14px;
+  opacity: 60%;
+}
+
+span{
+  color:rgb(248, 203, 0);
+  font-size: 30px;
+}
+
+.stars{
+  display: flex;
+  gap: 5px;
+}
 /* Подписка */
 .subscription {
   margin-top: 150px;
   height: 454px;
-  background-image: url(images/background.png);
+  background-image: url(D:/универ/СПО/front/images/background.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
