--- a/front/css/styles-plan.css
+++ b/front/css/styles-plan.css
@@ -1,4 +1,3 @@
-/* Основные стили */
 * {
   margin: 0;
   padding: 0;
@@ -50,6 +49,10 @@ a {
   color: black;
 }
 
+.head.click{
+  color:#12A370;
+}
+
 .profile-btn {
   padding: 8px 15px;
   text-decoration: none;
@@ -58,8 +61,127 @@ a {
   color: #12A370;
 }
 
-/* Рацион */
 
+h5{
+  padding-top: 14px;
+  opacity: 60%;
+}
+
+span{
+  color:rgb(248, 203, 0);
+  font-size: 30px;
+}
+
+.stars{
+  display: flex;
+  gap: 5px;
+}
+
+.ration {
+  margin: 30px;
+  padding: 0 20px;
+}
+
+.btn-small {
+  display: inline-block;
+  padding: 8px 15px;
+  background-color: #12A370;
+  color: white;
+  border-radius: 25px;
+  text-decoration: none;
+  margin-top: 10px;
+}
+
+.nutrition-info {
+  display: flex;
+  justify-content: space-around;
+  background-color: #12a3706f;
+  padding: 20px 0;
+  margin-top: 40px;
+  margin-bottom: 70px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.meal-block {
+  margin-bottom: 60px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+}
+
+.recipe-top{
+  background-color: #dfdfdf;
+  border-radius: 10px 10px 0 0;
+}
+
+.recipe-top h2{
+  padding-left: 30px;
+  padding-top: 10px;
+
+}
+
+.recipe-top p{
+  padding-left: 30px;
+  padding-bottom: 10px;
+}
+
+.recipes-grid {
+  display: flex;
+  gap: 70px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+  padding-top: 20px;
+}
+
+.recipe-card {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 16px 16px rgba(0, 0, 0, 0.08);
+  padding-bottom: 30px;
+  width: 30%;
+  text-align: center;
+  align-items: center;
+}
+
+.recipe-card img {
+  width: 100%;
+}
+
+.recipe-card h3 {
+  margin: 15px 0;
+  font-weight: 500;
+}
+
+.recipe-card p {
+  color: #12A370;
+  font-weight: 700;
+  font-size: 1.5em;
+}
+
+button {
+  background-color: #12A370;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  margin: 10px 0;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #0E8C58;
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
 
 /* Подвал */
 footer {
@@ -101,8 +223,9 @@ footer {
   font-weight: 500;
 }
 
-.footer p {
+footer p {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 30px;
 }
+
