--- a/front/css/styles-recipes.css
+++ b/front/css/styles-recipes.css
@@ -49,12 +49,76 @@ a {
   color: black;
 }
 
+.head.click{
+  color:#12A370;
+}
+
 .profile-btn {
   padding: 8px 15px;
   text-decoration: none;
   border: 1px solid #12A370;
   border-radius: 20px;
   color: #12A370;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+  
+.search-btn, .filter-btn {
+  background-color: white;
+  color: #12A370;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+  
+.search-bar {
+  display: flex;
+  margin-right: 10px;
+  opacity: 0;
+  transform: translateX(20px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+  
+.search-bar.active {
+  display: flex;
+  justify-content: center;
+  opacity: 1;
+  transform: translateX(0px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+  
+.search-input {
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+}
+
+.submit-btn {
+  padding: 10px 15px;
+  background-color: #12A370;
+  color: white;
+  border: none;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+  
+.submit-btn:hover {
+  background-color: #238f3c;
 }
 
 /* Секция "Наши рецепты" */
@@ -75,12 +139,15 @@ a {
 }
 
 .recipe-card {
+  display: flex;
+  flex-direction: column;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 16px 16px rgba(0, 0, 0, 0.08);
   padding-bottom: 30px;
   width: 30%;
   text-align: center;
+  align-items: center;
 }
 
 .recipe-card img {
@@ -108,11 +175,26 @@ a {
   margin-top: 10px;
 }
 
+h5{
+  padding-top: 14px;
+  opacity: 60%;
+}
+
+span{
+  color:rgb(248, 203, 0);
+  font-size: 30px;
+}
+
+.stars{
+  display: flex;
+  gap: 5px;
+}
+
 /* Подписка */
 .subscription {
   margin-top: 150px;
   height: 454px;
-  background-image: url(images/background.png);
+  background-image: url(D:/универ/СПО/front/images/background.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -254,3 +336,121 @@ footer p {
   margin-bottom: 30px;
 }
 
+.filter-sidebar {
+  position: fixed;
+  top: 0;
+  right: -350px; /* Скрыто по умолчанию */
+  width: 350px;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.2);
+  transition: right 0.3s ease;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-sidebar.open {
+  right: 0;
+}
+
+.filter-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  border-bottom: 1px solid #ddd;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.close-btn {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.filter-content {
+  padding: 20px;
+  overflow-y: auto;
+  flex: 1;
+}
+
+.filter-section {
+  margin-bottom: 30px;
+}
+
+.filter-section p {
+  font-size: larger;
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+
+li input{
+  color: #12A370;
+}
+
+.input-group{
+  display: flex;
+}
+
+.input-group input {
+  width: 48%;
+  padding: 8px;
+  margin-right: 4%;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.input-group input:last-child {
+  margin-right: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+ul li {
+  margin-bottom: 10px;
+  display: flex;
+  gap: 5px;
+}
+
+.apply-btn {
+  background-color: #12A370;
+  padding: 10px;
+  color: #12A370;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.apply-btn:hover {
+  background-color: #127d58;
+
+}
+
+/* Затемнение фона */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+  z-index: 999;
+}
+
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
