исправил пути к файлам

--- a/front/css/styles-main.css
+++ b/front/css/styles-main.css
@@ -189,7 +189,7 @@ span{
 .subscription {
   margin-top: 150px;
   height: 454px;
-  background-image: url(D:/универ/СПО/front/images/background.png);
+  background-image: url(images/background.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
