--- a/frontend/css/styles-near.css
+++ b/frontend/css/styles-near.css
@@ -115,28 +115,57 @@ iframe{
   padding-top: 30px;
 }
 /* Ingredients */
+.price h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
 .ingredients {
-    list-style: none;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  border-top: 1px solid #ccc;
+}
+
+.ingredients li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 10px 0;
 }
 
 .ingredients p {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #ddd;
-    padding: 8px;
+  margin: 0;
+  color: #666666c4;
+  font-weight: 500;
 }
 
+.ingredients span {
+  color: #666666c4;
+  font-weight: bold;
+  font-size: medium;
+}
+
+/* Итоговая стоимость */
 .total-cost {
-  padding-top: 20px;
-  padding-bottom: 30px;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
 }
 
 .highlight-link {
+  display: inline-block;
+  margin-top: 10px;
+  text-decoration: none;
+  color: #12A370;
+  font-weight: bold;
+}
 
-    color: #12A370;
-    font-weight: 600;
-    text-decoration: underline;
+.highlight-link:hover {
+  text-decoration: underline;
+  color: #0c6445;
 }
   
   /* Подвал */
